<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".izvodac.IzvodacSpecijalizacije">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSpec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:scrollbars="vertical"/>

        <EditText
            android:id="@+id/editSpec_dodaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerViewSpec"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/dodajSpec"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"/>

        <Button
            android:id="@+id/dodajSpec"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/recyclerViewSpec"
            android:text="Dodaj"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSpec2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_below="@+id/dodajSpec"
            android:scrollbars="vertical"/>

    </RelativeLayout>

</ScrollView>